# GridGraphPathFinder

./: .gitignore  .travis.yml  CMakeLists.txt  main.cpp
.github/workflows/: cpp.yml
UI/python/: controller.py  graph.py  grid_cell.py  main.py  model.py  view.py
cmake/: tbb.cmake
data/BaldursGateIIScaled/: .AR0011SR.map.swp
include/: Dijkstra.hpp  DijkstraQueue.hpp  Distance.hpp  GridCell.hpp  GridCellIterator.hpp  GridCorner.hpp  GridGraph.hpp  GridGraphIterator.hpp  ManhattanDijkstra.hpp  MultiTargetDijkstra.hpp  MultiTargetManhattanDijkstra.hpp  Node.hpp  Path.hpp  PathQuerySystem.hpp  ProgramOptions.hpp  Separation.hpp  SimpleDijkstra.hpp  Utils.hpp  WellSeparationCalculator.hpp  WellSeparationChecker.hpp
include/graph/: CellColumnIterator.hpp  CellColumnWalker.hpp  CellRowWalker.hpp  GridCell.hpp  GridCellIterator.hpp  GridCorner.hpp  GridGraph.hpp  GridGraphIterator.hpp  NeigbourCalculator.hpp  Node.hpp  NormalGraph.hpp
include/pathfinding/: AStar.hpp  CachingDijkstra.hpp  Dijkstra.hpp  DijkstraQueue.hpp  GridGraphDijkstra.hpp  ManhattanDijkstra.hpp  NormalDijkstra.hpp  Path.hpp
include/selection/: FullNodeSelectionCalculator.hpp  HubLabelSelectionLookup.hpp  NodeSelection.hpp  NodeSelectionCalculator.hpp  SelectionBucket.hpp  SelectionBucketCreator.hpp  SelectionBucketLookup.hpp  SelectionCenterCalculator.hpp  SelectionLookup.hpp  SelectionLookupOptimizer.hpp
include/separation/: NodeSelection.hpp  NodeSelectionCalculator.hpp  Separation.hpp  SeparationDistanceOracle.hpp  SeparationOptimizer.hpp  WellSeparationCalculator.hpp  WellSeparationCalculatorCache.hpp  WellSeparationChecker.hpp
include/utils/: ProgramOptions.hpp  Range.hpp  Timer.hpp  Utils.hpp
plots/selection/: counting_barplots.py
plots/separation/: cluster_distribution.py  counting_barplots.py  distance_distribution.py  distribution.py
src/: Dijkstra.cpp  GridCell.cpp  GridCellIterator.cpp  GridCorner.cpp  GridGraph.cpp  ManhattanDijkstra.cpp  MultiTargetDijkstra.cpp  MultiTargetManhattanDijkstra.cpp  Node.cpp  Path.cpp  ProgramOptions.cpp  Separation.cpp  SimpleDijkstra.cpp  main.cpp
src/graph/: CellColumnWalker.cpp  CellRowWalker.cpp  GridCell.cpp  GridCellIterator.cpp  GridCorner.cpp  GridGraph.cpp  GridGraphIterator.cpp  NeigbourCalculator.cpp  Node.cpp  NormalGraph.cpp
src/pathfinding/: AStar.cpp  CachingDijkstra.cpp  CachingGridGraphDijkstra.cpp  Dijkstra.cpp  GridGraphDijkstra.cpp  ManhattanDijkstra.cpp  NormalDijkstra.cpp  Path.cpp
src/selection/: HubLabelSelectionLookup.cpp  NodeSelection.cpp  SelectionBucket.cpp  SelectionBucketCreator.cpp  SelectionBucketLookup.cpp  SelectionLookup.cpp  SelectionLookupOptimizer.cpp
src/separation/: NodeSelection.cpp  Separation.cpp  SeparationDistanceOracle.cpp
src/utils/: ProgramOptions.cpp
test/: CMakeLists.txt  grid_cell_test.cpp  grid_graph_test.cpp  manhattan_dijkstra_test.cpp  node_test.cpp  simple_dijkstra_test.cpp
tex/overview/: overview.tex
